--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,12 @@
         <dependency>
             <groupId>kz.iitu</groupId>
             <artifactId>cfas-lib</artifactId>
-            <version>1.2.0</version>
+            <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.1.0</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
